--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^6.3.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -22,5 +23,4 @@
   "keywords": [],
   "author": "",
   "license": "ISC"
-
 }
