--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.3.5"
+    "express-interceptor": "^1.2.0",
+    "mongoose": "^6.3.5",
+    "redis": "^4.1.0",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/hapi__joi": "^17.1.8",
     "@types/node": "^17.0.25",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
