--- a/package.json
+++ b/package.json
@@ -2,39 +2,28 @@
   "name": "walcart",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-interceptor": "^1.2.0",
     "mongoose": "^6.3.5",
     "redis": "^4.1.0",
-    "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/hapi__joi": "^17.1.8",
-    "@types/jest": "^28.1.1",
     "@types/node": "^17.0.25",
-    "@types/supertest": "^2.0.12",
-    "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
-    "jest": "^28.1.0",
     "nodemon": "^2.0.15",
-    "supertest": "^6.2.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
-    "build": "tsc -p .",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage"
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
